# menos

./: CMakeLists.txt  README.md
src/menos/: CMakeLists.txt  main.cpp  scraper.cpp  scraper.hpp
src/menos/parsers/: category_parser.hpp  product_parser.hpp
